register login and get api
